logs/dag_id=dagwithpostgres/run_id=manual__2024-04-02T235614.021757+0000/task_id=create_table/attempt=1.log
[2024-04-02T23:56:15.471+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dagwithpostgres.create_table manual__2024-04-02T23:56:14.021757+00:00 [queued]>
[2024-04-02T23:56:15.489+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dagwithpostgres.create_table manual__2024-04-02T23:56:14.021757+00:00 [queued]>
[2024-04-02T23:56:15.491+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 4
[2024-04-02T23:56:15.520+0000] {taskinstance.py:2217} INFO - Executing <Task(PostgresOperator): create_table> on 2024-04-02 23:56:14.021757+00:00
[2024-04-02T23:56:15.529+0000] {standard_task_runner.py:60} INFO - Started process 1092 to run task
[2024-04-02T23:56:15.535+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dagwithpostgres', 'create_table', 'manual__2024-04-02T23:56:14.021757+00:00', '--job-id', '233', '--raw', '--subdir', 'DAGS_FOLDER/dagwithpostgres.py', '--cfg-path', '/tmp/tmp6y70nyn6']
[2024-04-02T23:56:15.537+0000] {standard_task_runner.py:88} INFO - Job 233: Subtask create_table
[2024-04-02T23:56:15.622+0000] {task_command.py:423} INFO - Running <TaskInstance: dagwithpostgres.create_table manual__2024-04-02T23:56:14.021757+00:00 [running]> on host 41da1b14e620
[2024-04-02T23:56:15.782+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='dagwithpostgres' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-04-02T23:56:14.021757+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-02T23:56:14.021757+00:00'
[2024-04-02T23:56:15.785+0000] {sql.py:276} INFO - Executing: 
    CREATE TABLE IF NOT EXISTS dag_runs (
            dt DATE,
            dag_id VARCHAR(250),
            timestamp TIMESTAMP,
            unique_num INT,
           
    
[2024-04-02T23:56:15.801+0000] {base.py:83} INFO - Using connection ID 'postgress_localhost' for task execution.
[2024-04-02T23:56:15.819+0000] {base.py:83} INFO - Using connection ID 'postgress_localhost' for task execution.
[2024-04-02T23:56:15.842+0000] {sql.py:457} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS dag_runs (
            dt DATE,
            dag_id VARCHAR(250),
            timestamp TIMESTAMP,
            unique_num INT,
           
    , parameters: None
[2024-04-02T23:56:15.854+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 8:     
            ^

[2024-04-02T23:56:15.871+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dagwithpostgres, task_id=create_table, execution_date=20240402T235614, start_date=20240402T235615, end_date=20240402T235615
[2024-04-02T23:56:15.908+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 233 for task create_table (syntax error at end of input
LINE 8:     
            ^
; 1092)
[2024-04-02T23:56:15.949+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-02T23:56:15.972+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-02T23:56:15.998+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
